test/good/14.cc
#include <stdio.h>
#include <string>

using std::string;

string printf(string s)
{
    // print it
    return (printf(s));
}

int main() {
   printf("Hello, World!");
   return 0;
}