test/bad/9.cc
#include <string>

using std::string;

string hello()
{
    return "hello";
}

int main()
{
    return 0;
}

string hello()
{
    return "bonjour";
}